Add content to all sections
All sections are almost completed.
The reservations part is missing a controller for input validation + to send an e-mail with the informations provided by the user.

--- a/js/languages/english.json
+++ b/js/languages/english.json
@@ -1,5 +1,7 @@
 {
-	"about":"Blablabla a bunch of text",
+	"about":"Beautiful chalet in the Mont-Tremblant area for rent ! It has 4 big recently renovated rooms, in excellent condition, with 5 beds : 4 Queen and 1 double, as well as a sofa bed fitting two. The terrain also has 2 ponds and 20 acres of forest for strolls. The chalet has a restroom and a bathroom. Contact us to rent it (up to 8 people, 3 nights minimum) for the low price of $125 per week night, and $300 per week-end night!",
+	"please_note":"PLEASE NOTE: To maintain the great condition of the chalet, please note that it is non-smoking and no animals inside the chalet. Also, please abstain from irresponsible partying.",
+	"thank_you":"Thank you!",
 	"images":"Some slideshow of images",
 	"reservations":"Some calendar",
 	"abouttitle":"About",
