--- a/js/languages/romanian.json
+++ b/js/languages/romanian.json
@@ -1,11 +1,17 @@
 {
-	"about":"Beau chalet avec situé dans la région de Mont-Tremblant à louer ! 4 Chambres rénovées récemment en excellente condition avec 5 lits : 4 Queen et 1 double, ainsi qu’un sofa-lit de deux places. Le terrain contient également 2 étangs et 20 acres de forêt pour la promenade. Le chalet a une salle de bain et une douche. Contactez-nous pour le louer (jusqu’à 8 personnes, 3 nuits minimum) seulement $125 par nuit en temps de semaine et $300 par nuit de fin de semaine!",
-	"please_note":"NOTEZ BIEN : Afin de maintenir l’excellente condition du chalet, s’il-vous-plaît notez que le chalet est non-fumeur et non pour les animaux à l’intérieur du chalet. On encourage les fêtards irresponsables de s’abstenir.",
-	"thank_you":"Merci!",
+	"about":"Chalet frumos în regiunea Mont-Tremblant de închiriat! 4 Camere renovate recent în condiție excelenta cu 5 paturi: 4 Queen și 1 dublu, cu un sofa-bed de doua locuri. Terenul conține 2 lacuri și 20 de acri de pădure pentru plimbării. Cabana are o baie (completa cu duș) și un Wc-u simplu. Contactați-ne sa închiriații (pana la 8 persoane, 3 nopți minim) pentru numai $125 pe noapte în timp de săptămâna și $300 pe noapte de week-end!",
+	"please_note":"NOTA BENE: Pentru a putea menține condiția excelata chalet-ului, va rugam sa notați ca chalet-ul e non-fumator și nu lăsam animalele în interior-ul chalet-ului. Va încurajam sa va abțineți de petreceri iresponsabile.",
+	"thank_you":"Mersi!",
 	"images":"Un slideshow cu ceva poze",
 	"reservations":"Un calendar sau ceva platforma sa se poata platii",
 	"abouttitle":"Despre noi",
 	"imagestitle":"Imagiini",
-	"reservationstitle":"Reservatii",
+	"reservationstitle":"Reservații",
+	"reservationsinfo":"Pentru a rezerva, completați acest formular!",
+	"reservationsname":"Care este numele vostr-ul?",
+	"reservationsemail":"Care este adresa voastra de e-mail?",
+	"reservationsstartdate":"Din ce data vreți sa rezervați?",
+	"reservationsenddate":"Pana ce data vreți sa rezervați?",
+	"reservationscomments":"Scrieți aici alte comentare care aveți.",
 	"title":"Cabana"
 }
