--- a/js/languages/french.json
+++ b/js/languages/french.json
@@ -1,5 +1,5 @@
 {
-	"about":"Beau chalet avec situé dans la région de Mont-Tremblant à louer ! 4 Chambres rénovées récemment en excellente condition avec 5 lits : 4 Queen et 1 double, ainsi qu’un sofa-lit de deux places. Le terrain contient également 2 étangs et 20 acres de forêt pour la promenade. Le chalet a une salle de bain et une douche. Contactez-nous pour le louer (jusqu’à 8 personnes, 3 nuits minimum) seulement $125 par nuit en temps de semaine et $300 par nuit de fin de semaine!",
+	"about":"Beau chalet avec situé dans la région de Mont-Tremblant à louer ! 4 Chambres rénovées récemment en excellente condition avec 5 lits : 4 Queen et 1 double, ainsi qu’un sofa-lit de deux places. Le terrain comprend également 2 étangs et 20 acres de forêt pour la promenade. Le chalet a une salle de bain complète (avec douche) et une toilette. Contactez-nous pour le louer (jusqu’à 8 personnes, 3 nuits minimum) seulement $125 par nuit en temps de semaine et $300 par nuit de fin de semaine!",
 	"please_note":"NOTEZ BIEN : Afin de maintenir l’excellente condition du chalet, s’il-vous-plaît notez que le chalet est non-fumeur et non pour les animaux à l’intérieur du chalet. On encourage les fêtards irresponsables de s’abstenir.",
 	"thank_you":"Merci!",
 	"images":"Quelques diapositives d'images",
