Small tweaks to main screen

--- a/js/languages/english.json
+++ b/js/languages/english.json
@@ -13,5 +13,5 @@
 	"reservationsstartdate":"From what date would you like to rent?",
 	"reservationsenddate":"Until what date would you like to rent?",
 	"reservationscomments":"Please write any other comments you have.",
-	"title":"Chalet"
+	"title":"Château Beau Soleil"
 }
