--- a/js/languages/french.json
+++ b/js/languages/french.json
@@ -13,5 +13,5 @@
 	"reservationsstartdate":"À partir de quelle date aimeriez-vous réserver?",
 	"reservationsenddate":"Jusqu'à quelle date aimeriez-vous réserver?",
 	"reservationscomments":"Écrivez ici d'autres questions que vous avez.",
-	"title":"Chalet"
+	"title":"Château Beau Soleil"
 }
