--- a/js/languages/romanian.json
+++ b/js/languages/romanian.json
@@ -13,5 +13,5 @@
 	"reservationsstartdate":"Din ce data vreți sa rezervați?",
 	"reservationsenddate":"Pana ce data vreți sa rezervați?",
 	"reservationscomments":"Scrieți aici alte comentare care aveți.",
-	"title":"Cabana"
+	"title":"Château Beau Soleil"
 }
