--- a/js/languages/romanian.json
+++ b/js/languages/romanian.json
@@ -5,7 +5,7 @@
 	"images":"Un slideshow cu ceva poze",
 	"reservations":"Un calendar sau ceva platforma sa se poata platii",
 	"abouttitle":"Despre noi",
-	"imagestitle":"Imagiini",
+	"imagestitle":"Imagini",
 	"reservationstitle":"Reservații",
 	"reservationsinfo":"Pentru a rezerva, completați acest formular!",
 	"reservationsname":"Care este numele vostr-ul?",
