Massive UI revamp of this page

--- a/js/languages/romanian.json
+++ b/js/languages/romanian.json
@@ -1,17 +1,22 @@
 {
-	"about":"Chalet frumos în regiunea Mont-Tremblant de închiriat! 4 Camere renovate recent în condiție excelenta cu 5 paturi: 4 Queen și 1 dublu, cu un sofa-bed de doua locuri. Terenul conține 2 lacuri și 20 de acri de pădure pentru plimbării. Cabana are o baie (completa cu duș) și un Wc-u simplu. Contactați-ne sa închiriații (pana la 8 persoane, 3 nopți minim) pentru numai $125 pe noapte în timp de săptămâna și $300 pe noapte de week-end!",
+	"about":"Chalet frumos în regiunea Mont-Tremblant de închiriat! Include: ",
+	"includes1": "4 Camere renovate recent în condiție excelenta",
+	"includes2": "5 paturi: 4 Queen și 1 dublu",
+	"includes3": "Un sofa-bed de doua locuri",
+	"includes4": "O baie (completa cu duș) și un WC-u simplu",
+	"includes5": "Un teren cu 2 lacuri și 20 de acri de pădure pentru plimbării",
 	"please_note":"NOTA BENE: Pentru a putea menține condiția excelata chalet-ului, va rugam sa notați ca chalet-ul e non-fumator și nu lăsam animalele în interior-ul chalet-ului. Va încurajam sa va abțineți de petreceri iresponsabile.",
 	"thank_you":"Mersi!",
 	"images":"Un slideshow cu ceva poze",
 	"reservations":"Un calendar sau ceva platforma sa se poata platii",
-	"abouttitle":"Despre noi",
-	"imagestitle":"Imagini",
-	"reservationstitle":"Reservații",
-	"reservationsinfo":"Pentru a rezerva, completați acest formular!",
-	"reservationsname":"Care este numele vostr-ul?",
-	"reservationsemail":"Care este adresa voastra de e-mail?",
-	"reservationsstartdate":"Din ce data vreți sa rezervați?",
-	"reservationsenddate":"Pana ce data vreți sa rezervați?",
-	"reservationscomments":"Scrieți aici alte comentare care aveți.",
+	"about_title":"Despre noi",
+	"images_title":"Imagini",
+	"reservations_title":"Reservații",
+	"reservation_spec": "Contactați-ne sa închiriații (pana la 8 persoane, 3 nopți minim) pentru numai $125 pe noapte în timp de săptămâna și $300 pe noapte de week-end!",
+	"reservation_text": "Pentru a rezerva, contactați pe Romeo: ",
+	"restrictions1": "Asigurați-vă să includeți numele vostr-ul complet",
+	"restrictions2": "Asigurați-vă să includeți zilele rezervării",
+	"restrictions3": "Nu acceptăm rezervări pentru mai mult de 8 persoane",
+	"restrictions4": "Nu acceptăm rezervări pentru mai puțin de 3 nopți",
 	"title":"Château Beau Soleil"
 }
