--- a/js/languages/english.json
+++ b/js/languages/english.json
@@ -1,17 +1,22 @@
 {
-	"about":"Beautiful chalet in the Mont-Tremblant area for rent ! It has 4 big recently renovated rooms, in excellent condition, with 5 beds : 4 Queen and 1 double, as well as a sofa bed fitting two. The terrain also has 2 ponds and 20 acres of forest for strolls. The chalet has a restroom and a bathroom. Contact us to rent it (up to 8 people, 3 nights minimum) for the low price of $125 per week night, and $300 per week-end night!",
+	"about":"Beautiful chalet in the Mont-Tremblant area for rent ! The chalet includes:",
+	"includes1": "4 big recently renovated rooms, in excellent condition",
+	"includes2": "5 beds : 4 Queen and 1 double",
+	"includes3": "A sofa bed fitting two",
+	"includes4": "A restroom and a bathroom",
+	"includes5": "A terrain with 2 ponds and 20 acres of forest for strolls",
 	"please_note":"PLEASE NOTE: To maintain the great condition of the chalet, please note that it is non-smoking and no animals inside the chalet. Also, please abstain from irresponsible partying.",
 	"thank_you":"Thank you!",
 	"images":"Some slideshow of images",
 	"reservations":"Some calendar",
-	"abouttitle":"About",
-	"imagestitle":"Images",
-	"reservationstitle":"Reservations",
-	"reservationsinfo":"To make a reservation, please fill in the boxes below!",
-	"reservationsname":"What is your name?",
-	"reservationsemail":"What is your e-mail address?",
-	"reservationsstartdate":"From what date would you like to rent?",
-	"reservationsenddate":"Until what date would you like to rent?",
-	"reservationscomments":"Please write any other comments you have.",
+	"about_title":"About",
+	"images_title":"Images",
+	"reservations_title":"Reservations",
+	"reservations_spec": "Contact us to rent it for the low price of $125 per week day, and $300 per week-end day!",
+	"reservations_text": "To make a reservation, please contact Romeo: ",
+	"restrictions1": "Please be sure to include your full name",
+	"restrictions2": "Please include the start and end dates for your reservation",
+	"restrictions3": "The reservation may be for up to 8 people",
+	"restrictions4": "The reservation must be for at least 3 nights",
 	"title":"Château Beau Soleil"
 }
