--- a/js/languages/french.json
+++ b/js/languages/french.json
@@ -1,17 +1,22 @@
 {
-	"about":"Beau chalet avec situé dans la région de Mont-Tremblant à louer ! 4 Chambres rénovées récemment en excellente condition avec 5 lits : 4 Queen et 1 double, ainsi qu’un sofa-lit de deux places. Le terrain comprend également 2 étangs et 20 acres de forêt pour la promenade. Le chalet a une salle de bain complète (avec douche) et une toilette. Contactez-nous pour le louer (jusqu’à 8 personnes, 3 nuits minimum) seulement $125 par nuit en temps de semaine et $300 par nuit de fin de semaine!",
+	"about":"Beau chalet situé dans la région de Mont-Tremblant à louer ! Le chalet comprend: ",
+	"includes1": "4 Chambres rénovées récemment en excellente condition",
+	"includes2": "5 lits : 4 Queen et 1 double",
+	"includes3": "Un sofa-lit de deux places",
+	"includes4": "Une salle de bain complète (avec douche) et une toilette",
+	"includes5": "Un terrain avec 2 étangs et 20 acres de forêt pour la promenade",
 	"please_note":"NOTEZ BIEN : Afin de maintenir l’excellente condition du chalet, s’il-vous-plaît notez que le chalet est non-fumeur et non pour les animaux à l’intérieur du chalet. On encourage les fêtards irresponsables de s’abstenir.",
 	"thank_you":"Merci!",
 	"images":"Quelques diapositives d'images",
 	"reservations":"Une sorte de calendrier et une plateforme pour payer",
-	"abouttitle":"À propos",
-	"imagestitle":"Images",
-	"reservationstitle":"Réservations",
-	"reservationsinfo":"Pour réserver, complétez ce formulaire!",
-	"reservationsname":"Quel est votre nom?",
-	"reservationsemail":"Quelle est votre addresse de courriel?",
-	"reservationsstartdate":"À partir de quelle date aimeriez-vous réserver?",
-	"reservationsenddate":"Jusqu'à quelle date aimeriez-vous réserver?",
-	"reservationscomments":"Écrivez ici d'autres questions que vous avez.",
+	"about_title":"À propos",
+	"images_title":"Images",
+	"reservations_title":"Réservations",
+	"reservations_spec": "Contactez-nous pour le louer pour seulement $125 par nuit en temps de semaine et $300 par nuit de fin de semaine!",
+	"reservations_text": "Pour réserver, contactez Romeo: ",
+	"restrictions1": "Assurez-vous d'inclure votre nom complet",
+	"restrictions2": "Assurez-vous d'inclure les dates souhaitées",
+	"restrictions3": "Nous n'acceptons pas de réservations pour plus de 8 personnes",
+	"restrictions4": "Nous n'acceptons pas de réservations pour moins de 3 nuits",
 	"title":"Château Beau Soleil"
 }
