--- a/js/languages/english.json
+++ b/js/languages/english.json
@@ -1,22 +1,32 @@
 {
-	"about":"Beautiful chalet in the Mont-Tremblant area for rent ! The chalet includes:",
-	"includes1": "4 big recently renovated rooms, in excellent condition",
-	"includes2": "5 beds : 4 Queen and 1 double",
-	"includes3": "A sofa bed fitting two",
-	"includes4": "A restroom and a bathroom",
-	"includes5": "A terrain with 2 ponds and 20 acres of forest for strolls",
+	"about": [
+		"The Château Beau-Soleil is the perfect location for a pleasant vacation, whether it's a week-long escapade or a relaxing week-end.",
+		"Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located a 10-minuted drive away, as well as a few restaurants and the Kanata Aki center.",
+		"On a large terrain of 20 acres, with a bit of luck, you may even cross paths with wild animals such as otters, deers or foxes.",
+		"We also offer a jacuzzi and a barrel sauna, but we're counting on you to bring the mimosas!",
+		"Welcome!",
+		"The chalet includes:"
+	],
+	"includes": [
+		"4 big recently renovated rooms, in excellent condition",
+		"5 beds : 4 Queen and 1 double",
+		"A sofa bed fitting two",
+		"A restroom and a bathroom",
+		"A terrain with 2 ponds and 20 acres of forest for strolls"
+	],
 	"please_note":"PLEASE NOTE: To maintain the great condition of the chalet, please note that it is non-smoking and no animals inside the chalet. Also, please abstain from irresponsible partying.",
 	"thank_you":"Thank you!",
-	"images":"Some slideshow of images",
-	"reservations":"Some calendar",
 	"about_title":"About",
 	"images_title":"Images",
 	"reservations_title":"Reservations",
-	"reservations_spec": "Contact us to rent it for the low price of $125 per week day, and $300 per week-end day!",
+	"reservations_spec": "Contact us to rent it for the low price of $1200 per week and $650 per week-end.",
 	"reservations_text": "To make a reservation, please contact Romeo: ",
-	"restrictions1": "Please be sure to include your full name",
-	"restrictions2": "Please include the start and end dates for your reservation",
-	"restrictions3": "The reservation may be for up to 8 people",
-	"restrictions4": "The reservation must be for at least 3 nights",
-	"title":"Château Beau Soleil"
+	"restrictions": [
+		"Please be sure to include your full name",
+		"Please include the start and end dates for your reservation",
+		"The reservation may be for up to 8 people",
+		"The reservation must be for at least 3 nights"
+	],
+	"title":"Château Beau Soleil",
+	"establishment": "Establishment number: 296263"
 }
