Minor romanian fixes

--- a/js/languages/romanian.json
+++ b/js/languages/romanian.json
@@ -1,8 +1,8 @@
 {
 	"about":[
 		"Château Beau-Soleil e locația perfectă pentru o vacanță frumoasă, fie o escursie de o săptămână completă sau doar un week-end relaxant.",
-		"Situat aproape de Mont-Tremblant și cascada Archambeault, chalet-ul e in proximitate de trasee de snowmobil federale. Sunt mai multe puncte de servicii la mai putin de 10 minute de masinâ, niște restaurante și Centrul Kanata Aki.",
-		"Pe un teren enorm de 20 de acre, veți putea întâlnii animale sălbatice draguțe ca și vidre, căprioare și vulpi.",
+		"Situat aproape de Mont-Tremblant și cascada Archambeault, chalet-ul e in proximitate de trasee de snowmobil federale. Sunt mai multe puncte de servicii la mai puțin de 10 minute de mașinâ, niște restaurante și Centrul Kanata Aki.",
+		"Pe un teren enorm de 20 de acre, veți putea întâlnii animale sălbatice drăguțe ca și vidre, căprioare și vulpi.",
 		"Vă ofrim un jacuzzi și un sauna butoi; doar țuica nu e inclusa.",
 		"Bine ați venit!",
 		"Incluse: "
@@ -14,12 +14,12 @@
 		"O baie (completa cu duș) și un WC-u simplu",
 		"Un teren cu 2 lacuri și 20 de acri de pădure pentru plimbării"
 	],
-	"please_note":"NOTA BENE: Pentru a putea menține condiția excelata chalet-ului, vă rugăm să țineți cont ca chalet-ul e non-fumator și nu lăsam animalele în interior-ul chalet-ului. Va încurajam sa va abțineți de petreceri iresponsabile.",
+	"please_note":"NOTA BENE: Pentru a putea menține condiția excelata a chalet-ului, vă rugăm să țineți cont că chalet-ul e non-fumator și nu lăsam animalele în interior-ul chalet-ului. Va încurajam să vă abțineți de petreceri iresponsabile.",
 	"thank_you":"Mersi!",
 	"about_title":"Despre noi",
 	"images_title":"Imagini",
 	"reservations_title":"Reservații",
-	"reservations_spec": "Contactați-ne sa închiriații (până la 8 persoane, 3 nopți minim) pentru numai $1200 pe săptămâna și $650 pe week-end!",
+	"reservations_spec": "Contactați-ne să închiriații (până la 8 persoane, 3 nopți minim) pentru numai $1200 pe săptămâna și $650 pe week-end!",
 	"reservations_text": "Pentru a rezerva, vă rugăm să îl contactați pe Romeo: ",
 	"restrictions": [
 		"Asigurați-vă să includeți numele vostr-ul complet",
