Minor fix to English

--- a/js/languages/english.json
+++ b/js/languages/english.json
@@ -1,7 +1,7 @@
 {
 	"about": [
 		"The Château Beau-Soleil is the perfect location for a pleasant vacation, whether it's a week-long escapade or a relaxing week-end.",
-		"Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located a 10-minuted drive away, as well as a few restaurants and the Kanata Aki center.",
+		"Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located only a 10-minute drive away, as well as a few restaurants and the Kanata Aki center.",
 		"On a large terrain of 20 acres, with a bit of luck, you may even cross paths with wild animals such as otters, deers or foxes.",
 		"We also offer a jacuzzi and a barrel sauna, but we're counting on you to bring the mimosas!",
 		"Welcome!",
